# DocumentManipulation

./: .editorconfig  .gitignore  .isort.cfg  About.md  License.txt  ProjectConfiguration.json  ReadMe.md  cspell.yaml  pylintrc  pytest.ini
Automation/Scripts/: pyproject.toml
Automation/Scripts/automation_scripts/: run_command.py
Automation/Scripts/automation_scripts/commands/: application.py  application_command.py  clean.py  develop.py  distribution.py
Automation/Scripts/automation_scripts/configuration/: application_development_configuration.py  automation_configuration.py  configuration_manager.py  project_configuration.py  project_environment.py  workspace_environment.py
Automation/Scripts/automation_scripts/toolkit/applications/: application_metadata.py  application_package_configuration.py  application_version_helpers.py
Automation/Scripts/automation_scripts/toolkit/python/: pyinstaller_configuration.py  pyinstaller_runner.py  python_application_builder.py  (+2 more)
Sources/application/: pyproject.toml
Sources/application/benjaminhamon_document_manipulation_application/: __init__.py  application.py  application_command.py  application_command_group.py  application_helpers.py
Sources/application/benjaminhamon_document_manipulation_application/commands/: convert_markdown_to_odt_command.py  convert_odt_to_epub_command.py  convert_odt_to_markdown_command.py  convert_odt_to_xhtml_command.py  create_epub_package_command.py  generate_cover_command.py  generate_epub_files_command.py  generate_information_as_xhtml_command.py  info_command.py  rewrite_odt_command.py  split_odt_command.py  stage_files_for_epub_package_command.py
Sources/application/benjaminhamon_document_manipulation_application/logging/: logging_helpers.py
Sources/scripts/: pyproject.toml  setup.py
Sources/scripts/benjaminhamon_document_manipulation_scripts/: __init__.py  convert_markdown_to_odt.py  convert_odt_to_epub.py  convert_odt_to_markdown.py  convert_odt_to_xhtml.py  create_epub_package.py  generate_cover.py  generate_epub_files.py  generate_information_as_xhtml.py  rewrite_odt.py  script_helpers.py  split_odt.py  stage_files_for_epub_package.py
Sources/scripts/benjaminhamon_document_manipulation_scripts/revision_control/: git_client.py  revision_control_client.py
Sources/toolkit/: pyproject.toml  setup.py
Sources/toolkit/benjaminhamon_book_distribution_toolkit/: __init__.py
Sources/toolkit/benjaminhamon_book_distribution_toolkit/documents/: document_element.py  document_element_factory.py  document_operations.py  heading_element.py  paragraph_element.py  root_element.py  section_element.py  text_element.py
Sources/toolkit/benjaminhamon_book_distribution_toolkit/epub/: epub_configuration_factory.py  epub_content_writer.py  epub_manifest_item.py  epub_metadata_item.py  epub_metadata_refine.py  epub_namespaces.py  epub_navigation_builder.py  epub_package_builder.py  epub_package_configuration.py  epub_package_document.py  epub_spine_item.py  epub_xhtml_builder.py  epub_xhtml_helpers.py  epub_xhtml_writer.py
Sources/toolkit/benjaminhamon_book_distribution_toolkit/open_document/: odt_builder.py  odt_builder_for_copies.py  odt_namespaces.py  odt_operations.py  odt_reader.py  odt_writer.py
Sources/toolkit/benjaminhamon_book_distribution_toolkit/xml/: xml_operations.py  xpath_helpers.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/: __init__.py  convert_helpers.py  text_operations.py  urn_helpers.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/conversion/: markdown_to_odt_configuration.py  odt_to_epub_configuration.py  odt_to_markdown_configuration.py  odt_to_xhtml_configuration.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/documents/: document_definition.py  document_element_exception.py  document_element_factory.py  document_information.py  document_operations.py  heading_element.py  metadata_operations.py  paragraph_element.py  root_element.py  section_element.py  text_element.py  text_region_end_element.py  text_region_start_element.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/epub/: document_to_xhtml_converter.py  epub_configuration_factory.py  epub_content_configuration.py  epub_content_writer.py  epub_content_xhtml_builder.py  epub_generation_configuration.py  epub_landmark.py  epub_metadata.py  epub_metadata_builder.py  epub_metadata_item.py  epub_metadata_refine.py  epub_navigation.py  epub_navigation_builder.py  epub_navigation_item.py  epub_navigation_xhtml_builder.py  epub_package_builder.py  epub_package_configuration.py  epub_package_configuration_builder.py  epub_package_document.py  epub_xhtml_builder.py  epub_xhtml_helpers.py  epub_xhtml_writer.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/html/: document_to_html_converter.py  html_operations.py  html_reader.py  html_to_document_converter.py  html_writer.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/interfaces/: document_reader.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/markdown/: document_to_markdown_converter.py  markdown_reader.py  markdown_to_html_converter.py  markdown_writer.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/metadata/: dc_contributor.py  dc_metadata.py  marc_relator_conversion.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/open_document/: document_to_odt_converter.py  odt_builder.py  odt_builder_for_copies.py  odt_namespaces.py  odt_operations.py  odt_reader.py  odt_to_document_converter.py  odt_writer.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/serialization/: datetime_serialization_converter.py  file_structure_serializer.py  json_serializer.py  object_index.py  path_serialization_converter.py  serialization_converter.py  serialization_converter_for_composition.py  serializer.py  serializer_factory.py  yaml_serializer.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/svg/: svg_operations.py
Sources/toolkit/benjaminhamon_document_manipulation_toolkit/xml/: xml_operations.py  xpath_helpers.py
(+96 files in other folders)
