# cspell:words asyncio pylint pytest setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "automation-scripts"
dynamic = [ "version" ]
description = "Automation scripts for the local project"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "bhamon-development-toolkit ~= 2.0.1",
    "mockito ~= 1.4.0",
    "pylint ~= 2.17.5",
    "pytest ~= 7.4.0",
    "pytest-asyncio ~= 0.21.1",
    "pytest-json ~= 0.4.0",
    "twine ~= 4.0.2",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/DocumentManipulation"

[project.scripts]
automation = "automation_scripts.run_command:main"
