# cspell:words asyncio pyinstaller pylint pytest setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "automation-scripts"
dynamic = [ "version" ]
description = "Automation scripts for the local project"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "bhamon-development-toolkit[python] ~= 3.0.1",
    "requests ~= 2.32.3",
]

[project.optional-dependencies]
dev = [
    "mockito ~= 1.5.0",
    "pylint ~= 3.2.6",
    "pytest ~= 8.3.2",
    "pytest-asyncio ~= 0.24.0",
    "pytest-json ~= 0.4.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/DocumentManipulation"

[project.scripts]
automation = "automation_scripts.run_command:main"
