# cspell:words setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "benjaminhamon-document-manipulation-application"
dynamic = [ "version" ]
description = "Toolkit for manipulating text documents"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "benjaminhamon-document-manipulation-scripts ~= 1.0.0",
    "benjaminhamon-document-manipulation-toolkit ~= 1.0.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/DocumentManipulation"

[tool.setuptools]
license-files = [ "../../About.md", "../../License.txt" ]

[tool.setuptools.dynamic]
version = { attr = "benjaminhamon_document_manipulation_application.__metadata__.__version__" }
