# cspell:words asyncio pylint pytest setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "benjaminhamon-document-manipulation-application"
version = "1.0.0+development"
description = "Toolkit for manipulating text documents"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "benjaminhamon-document-manipulation-scripts ~= 1.0.0",
    "benjaminhamon-document-manipulation-toolkit ~= 1.0.0",
]

[project.optional-dependencies]
dev = [
    "mockito ~= 1.5.0",
    "pylint ~= 3.2.6",
    "pytest ~= 8.3.2",
    "pytest-json ~= 0.4.0",
    "pytest-asyncio ~= 0.24.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/DocumentManipulation"

[project.scripts]
DocumentManipulation = "benjaminhamon_document_manipulation_application.application:main"

[tool.setuptools]
license-files = [ "../../About.md", "../../License.txt" ]
