# cspell:words asyncio lxml pylint pytest setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "benjaminhamon-document-manipulation-scripts"
dynamic = [ "version" ]
description = "Toolkit for manipulating text documents"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "benjaminhamon-document-manipulation-toolkit ~= 1.0.0",
    "lxml ~= 4.9.3",
    "lxml-stubs ~= 0.4.0",
    "PyYAML ~= 6.0.1",
]

[project.optional-dependencies]
dev = [
    "mockito ~= 1.5.0",
    "pylint ~= 3.2.6",
    "pytest ~= 8.3.2",
    "pytest-json ~= 0.4.0",
    "pytest-asyncio ~= 0.24.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/DocumentManipulation"

[tool.setuptools]
license-files = [ "../../About.md", "../../License.txt" ]

[tool.setuptools.dynamic]
version = { attr = "benjaminhamon_document_manipulation_scripts.__metadata__.__version__" }
