# cspell:words asyncio dateutil lxml pylint pytest setuptools svglib

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "benjaminhamon-document-manipulation-toolkit"
version = "1.0.0+development"
description = "Toolkit for manipulating text documents"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "lxml ~= 5.3.0",
    "python-dateutil ~= 2.9.0",
    "PyYAML ~= 6.0.2",
    "rlPyCairo ~= 0.3.0",
    "svglib ~= 1.5.1",
    "types-lxml ~= 2024.12.13",
]

[project.optional-dependencies]
dev = [
    "mockito ~= 1.5.0",
    "pylint ~= 3.2.6",
    "pytest ~= 8.3.2",
    "pytest-json ~= 0.4.0",
    "pytest-asyncio ~= 0.24.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/DocumentManipulation"

[tool.setuptools]
license-files = [ "../../About.md", "../../License.txt" ]
